...
            type = NotificationType.INFO,
            isRead = false
        ),
        NotificationItem(
            id = "3",
            title = "Target Tabungan Tercapai \uD83C\uDF89",
            message = "Selamat! Anda telah mencapai 100% dari target tabungan 'Dana Darurat'.",
            timestamp = "10 Apr, 16:45",
            type = NotificationType.SUCCESS,
            isRead = true
        ),
        NotificationItem(
            id = "4",
...
